syntax = "proto3";

package TW.Zcash.Proto;
option java_package = "wallet.core.jni.proto";

message TransactionBuilderExtraData {
    // Currently, `branch_id` is the only configurable Zcash specific parameter.
    // There can also be `version_group_id` configured in the future.
    bytes branch_id = 1;

    // Whether to calculate the fee according to ZIP-0317 for the given transaction
    // https://zips.z.cash/zip-0317#fee-calculation
    bool zip_0317 = 2;
}
